--- a/index.html
+++ b/index.html
@@ -13,12 +13,41 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <!--[if lt IE 7]>
-      <p class="browsehappy">
-        You are using an <strong>outdated</strong> browser. Please
-        <a href="#">upgrade your browser</a> to improve your experience.
+    <main>
+      <h1>Disc jockey or fun job?</h1>
+
+      <p>
+        A disc jockey, more commonly abbreviated as DJ, is a person who plays
+        recorded music for an audience. Types of DJs include radio DJs (who host
+        programs on music radio stations), club DJs (who work at a nightclub or
+        music festival), mobile DJs (who are hired to work at public and private
+        events such as weddings, parties, or festivals), and turntablists (who
+        use record players, usually turntables, to manipulate sounds on
+        phonograph records). Originally, the "disc" in "disc jockey" referred to
+        shellac and later vinyl records, but nowadays DJ is used as an
+        all-encompassing term to also describe persons who mix music from other
+        recording media such as cassettes, CDs or digital audio files on a CDJ,
+        controller, or even a laptop. DJs may adopt the title "DJ" in front of
+        their real names, adopted pseudonyms, or stage names.
       </p>
-    <![endif]-->
+
+      <p>
+        DJs commonly use audio equipment that can play at least two sources of
+        recorded music simultaneously. This enables them to blend tracks
+        together to create transitions between recordings and develop unique
+        mixes of songs. This can involve aligning the beats of the music sources
+        so their rhythms and tempos do not clash when played together and enable
+        a smooth transition from one song to another. DJs often use specialized
+        DJ mixers, small audio mixers with crossfader and cue functions to blend
+        or transition from one song to another.[2][3][4] Mixers are also used to
+        pre-listen to sources of recorded music in headphones and adjust
+        upcoming tracks to mix with currently playing music. DJ software can be
+        used with a DJ controller device to mix audio files on a computer
+        instead of a console mixer. DJs may also use a microphone to speak to
+        the audience; effects units such as reverb to create sound effects and
+        electronic musical instruments such as drum machines and synthesizers.
+      </p>
+    </main>
 
     <script src="" async defer></script>
   </body>
