--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
         Originally, the "disc" in "disc jockey" referred to shellac and later
         vinyl records, but nowadays DJ is used as an all-encompassing term to
         also describe persons who mix music from other recording media such as
-        cassettes, CDs or digital audio files on a CDJ, controller, or even a
-        laptop. DJs may adopt the title "DJ" in front of their real names,
-        adopted pseudonyms, or stage names.
+        <i>cassettes</i>, <i>CDs</i> or <i>digital audio files</i> on a
+        <i>CDJ</i>, <i>controller</i>, or even a <i>laptop</i>. DJs may adopt
+        the title <em>"DJ"</em> in front of their real names, adopted
+        pseudonyms, or stage names.
       </p>
 
       <p>
@@ -42,7 +43,7 @@
         so their rhythms and tempos do not clash when played together and enable
         a smooth transition from one song to another. DJs often use specialized
         DJ mixers, small audio mixers with crossfader and cue functions to blend
-        or transition from one song to another.[2][3][4] Mixers are also used to
+        or transition from one song to another. Mixers are also used to
         pre-listen to sources of recorded music in headphones and adjust
         upcoming tracks to mix with currently playing music. DJ software can be
         used with a DJ controller device to mix audio files on a computer
@@ -51,7 +52,5 @@
         electronic musical instruments such as drum machines and synthesizers.
       </p>
     </main>
-
-    <script src="" async defer></script>
   </body>
 </html>
